--- a/cookies.css
+++ b/cookies.css
@@ -3,43 +3,43 @@
     top:0;
     left:0;
     width:100%;
-    height:80px;
-    background-color:red;
+    height:50px;
+    background-color:black;
+    position: fixed;
+    
 }
 .h2{
     position:absolute;
-    top:20px;
+    top:0px;
     left:30px;
     font-family:Segoe Script;
     color:blue;
-    font-size: 20px; 
+    font-size: 20px;
+
 }
 .footer{
     position:absolute;
     bottom:0;
     left:0;
     width:100%;
-    height:80px;
-    background-color:red;
+    height:40px;
+    background-color:black;
+    position:fixed;
+    padding: 1px;
 }
 .footer button{
-    background-color:yellow;
-    color:black;
-    font-family:Veranda;
     position:absolute;
-    bottom:40px;
-    width:70px;
-
 }
+
 #myScale{
-    left:40px;
+    left:2%;
+
 }
 #createTask{
-    left:500px;
+    left:9%;
 }
-.options{
-    left:960px;
-
+#options{
+   left:70%;
 }
 
 .modal {
@@ -133,11 +133,96 @@
 }
 .createTaskButton{
     position:absolute;
-    top:550px;
-    bottom:300px;
+    
 }
 .mainList{
     position:absolute;
     top:150px;
     
+}
+.optionsModal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.optionsModal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+    height: 30%;
+}
+
+/* The Close Button */
+.optionsClose {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+.labelSort{
+    position: absolute;  
+}
+.optionsModal-content button{
+    position:absolute; 
+    bottom:310px;
+    background:red;
+}
+.buttonSortOne{
+    left:150px;
+}
+.buttonSortTwo{
+    left:260px;
+}
+.buttonSortAlphabetically{
+left:410px;
+}
+body{
+    background:black;
+}
+.historyButton{
+left:41%;
+}
+.history{
+    display:none;
+    position:fixed;
+    background-color:beige;
+    width:100%;
+    height:25%;
+    bottom: 10%;
+    left:0;
+}
+.historyInput{
+    position:absolute;
+    bottom:-17%;
+    width:50%;
+    background-color: beige;
+    color:red;
+}
+.send{
+    position:absolute;
+    bottom:-17%;
+    width:10%;
+    left:80%;
+}
+.historyButton2{
+left:41%;
+display:none;
 }
